[tool.poetry]
name = "python-jinja-pdf"
version = "0.1.0"
description = ""
authors = ["tkk <t.kleylein@web.de>"]
readme = "README.md"
packages = [{include = "python_jinja_pdf"}]

[tool.poetry.dependencies]
python = "^3.9"
jinja2 = "^3.1.3"
pdfkit = "^1.0.0"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

